################################################################################
#	\file configure.in
#	\author Gregory Diamos
#	\date Monday June 15, 2009
# 	\brief Autoconf input file describing the checks that need to be performed 
#			to create a configure script for the ocelot sdk2.2 regression test
#			project.
################################################################################

################################################################################
## Package specification
# Revision scheme is MajorFeatureSet.MinorFeatureSet.SVNChangelistNumber
AC_PREREQ(2.61)
AC_INIT(ocelot_Sdk_2.2_Regression_Suite, 0.1.72, gregory.diamos@gatech.edu)
AM_INIT_AUTOMAKE([])
################################################################################

################################################################################
## Configure autoconf
AC_USE_SYSTEM_EXTENSIONS
AC_CONFIG_MACRO_DIR([m4])
################################################################################

################################################################################
## Package Configuration
AC_CONFIG_HEADER([configure.h])
################################################################################

################################################################################
# Check for non-compiler programs
AC_CHECK_PROG(HAVE_OCELOT_CONFIG, OcelotConfig, yes, no)

if test $HAVE_OCELOT_CONFIG = yes
then
	AC_DEFINE(HAVE_OCELOT, [1], ["Define to 1 if ocelot is installed"])
	AC_SUBST(OCELOT_LDFLAGS, "$(OcelotConfig -l | tr '\n' ' ')")
else
	AC_MSG_ERROR("Ocelot needs to be installed.")
fi
################################################################################

################################################################################
## Checks for libraries.
AC_CHECK_LIB([glut], [glutMainLoop], [], \
	AC_MSG_ERROR("libglut required"))
AC_CHECK_LIB([cufft], [main], [AC_DEFINE(HAVE_CUFFT, [], [""])], \
	AC_MSG_ERROR("libcufft required"), [$OCELOT_LDFLAGS])
AC_CHECK_LIB([cublas], [main], [AC_DEFINE(HAVE_CUBLAS, [], [""])], \
	AC_MSG_ERROR("libcublas required"), [$OCELOT_LDFLAGS])
################################################################################

################################################################################
## Checks for programs.
AC_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CC
AM_PROG_CC_C_O
################################################################################

################################################################################
# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_STDC
AC_CHECK_HEADERS([float.h limits.h memory.h stdint.h stdlib.h string.h \
	sys/time.h wchar.h])
################################################################################

################################################################################
# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_MODE_T
AC_FUNC_OBSTACK
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_STRUCT_TIMEZONE
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T
AC_CHECK_TYPES([ptrdiff_t])
################################################################################

################################################################################
# Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_FSEEKO
AC_FUNC_MKTIME
AC_FUNC_STRCOLL
AC_FUNC_STRERROR_R
AC_FUNC_STRNLEN
AC_FUNC_STRTOD
AC_CHECK_FUNCS([atexit bzero clock_gettime floor getdelim gettimeofday \
	localtime_r mblen memchr memmove mempcpy memset modf pow putenv realpath \
	rint rpmatch select setenv sqrt stime stpcpy strcasecmp strchr strcspn \
	strdup strerror strncasecmp strndup strpbrk strrchr strspn strstr strtol \
	strtoul strtoull strtoumax strverscmp tzset])
################################################################################

################################################################################
## Output generation
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
################################################################################

